Fixing image width on mobile

--- a/src/js/layout/Modal/modal.styl
+++ b/src/js/layout/Modal/modal.styl
@@ -110,14 +110,9 @@
     color white
   .image-text-2
     font-family 'Letter Gothic Std'
-  @media screen and (max-width: $breakPointMedium)
-    .full-image
-      max-width 100px !important
-      height auto !important
-  @media screen and (min-width: $breakPointMedium) and (max-width $breakPointBig)
+  @media screen and (max-width: $breakPointBig)
     .full-image
       max-width 200px !important
-      height auto !important
 
 .text
   font-family 'Stanley'
